# battleship-calculator

./: Cargo.toml  GithubPagesTrunk.toml  flake.nix  index.html  rust-toolchain.toml
.github/: Trunk.toml
.github/workflows/: cargo-build.yaml
src/: battlemap.rs  brain.rs  inputs.rs  main.rs
